# karaokeproject

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  local_karaoke_web_app_project_brief.md  package-lock.json  package.json  pyproject.toml  website-scaling-plan.md
backend/: __init__.py
backend/adapters/: ffmpeg.py  separator.py  youtube.py
backend/api/: dependencies.py  main.py
backend/api/routes/: assets.py  exports.py  imports.py  models.py  settings.py  storage.py  system.py  tracks.py
backend/core/: binaries.py  config.py  constants.py  stems.py  worker_health.py
backend/db/: models.py  session.py
backend/schemas/: exports.py  imports.py  models.py  settings.py  storage.py  system.py  tracks.py  validation.py
backend/services/: diagnostics.py  exporters.py  exports.py  imports.py  metrics.py  mixing.py  models.py  processing.py  settings.py  storage.py  tracks.py
backend/workers/: processor.py  runner.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  api.ts  importableMedia.ts  index.css  redesign.css  routes.ts  runSelection.ts  stems.ts  types.ts
frontend/src/components/: ActivityPanel.tsx  BatchActionBar.tsx  CompareView.tsx  DiagnosticsPanel.tsx  ExportModal.tsx  ImportFlowDialog.tsx  ImportModal.tsx  ImportPanel.tsx  ImportReviewShelf.tsx  InboxList.tsx  ModelPicker.tsx  ProfileTierBadge.tsx  QueueDock.tsx  QueueList.tsx  SettingsDrawer.tsx  SettingsPanel.tsx  StagedImportsPanel.tsx  StemSelectionPicker.tsx  TrackDetailPanel.tsx  (+10 more)
scripts/: run-python.sh  setup-python.sh
(+27 files in other folders)
